# p1-django-auth-crud

./: README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt
djangocrud/: pyproject.toml  settings.py  urls.py
tasks/: models.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/: base.html  create_task.html  home.html  signin.html  signup.html  task_detail.html  tasks.html
