[tool.poetry]
name = "djangocrud"
version = "0.1.0"
description = "Django authentication  and crud"
authors = ["Aracelli Centeno <aracellice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
